--- a/web/index.html
+++ b/web/index.html
@@ -60,6 +60,7 @@
 					<ul class="product-properties">
 						<li><span class="propert-name">Prijs:</span><span class="product_price"></span></li>
 						<li><span class="propert-name">Code:</span><span class="product_code"></span></li>
+            <li><span class="propert-name">Hoeveelheid:</span><span class="product_quantity"></span></li>
 					</ul>
 					<input class="product_amount" type="number" value="1" min="1">
 					<input class="product_id" type="hidden" name="id" data-json="">
