--- a/web/index.html
+++ b/web/index.html
@@ -60,7 +60,10 @@
 					<ul class="product-properties">
 						<li><span class="propert-name">Prijs:</span><span class="product_price"></span></li>
 						<li><span class="propert-name">Code:</span><span class="product_code"></span></li>
-            <li><span class="propert-name">Hoeveelheid:</span><span class="product_quantity"></span></li>
+            <li><span class="propert-name">Quantity:</span><span class="product_quantity"></span></li>
+            <li><span class="propert-name">Delivery time:</span><span class="product_delivery"></span></li>
+            <li><span class="propert-name">Resell:</span><span class="product_resell"></span></li>
+            <li><span class="propert-name">In stock:</span><span class="product_instock"></span></li>
 					</ul>
 					<input class="product_amount" type="number" value="1" min="1">
 					<input class="product_id" type="hidden" name="id" data-json="">
