--- a/web/index.html
+++ b/web/index.html
@@ -125,6 +125,8 @@
               clone.querySelector(".product_title").textContent = name
               clone.querySelector(".product_description").textContent =`${product.description.substr(0, 100)}`
               clone.querySelector(".product_price").textContent = `€ ${product.price.toFixed(2)}`
+              clone.querySelector(".product_quantity").textContent =`${product.quantity}`
+              clone.querySelector(".product_resell").textContent =`${product.resell}`
               clone.querySelector(".product_code").textContent = product.code
               clone.querySelector(".product_id").value = product.id
               clone.querySelector(".product_id").dataset.json = JSON.stringify(product)
