--- a/web/index.html
+++ b/web/index.html
@@ -55,14 +55,15 @@
 				<img width="200" class="product_image card-img-top">
 				<div class="card-body">
 					<p class="product_description card-text"></p>
-					<ul class="product-properties">
-						<li><span class="propert-name">Prijs:</span><span class="product_price"></span></li>
-						<li><span class="propert-name">Code:</span><span class="product_code"></span></li>
-            <li><span class="propert-name">Quantity:</span><span class="product_quantity"></span></li>
-            <li><span class="propert-name">Delivery time:</span><span class="product_delivery"></span></li>
-            <li><span class="propert-name">Resell:</span><span class="product_resell"></span></li>
-            <li><span class="propert-name">In stock:</span><span class="product_instock"></span></li>
-					</ul>
+          <ul class="product-properties">
+              <li><span class="propert-name">Prijs:</span><span class="product_price"></span></li>
+              <li><span class="propert-name">Code:</span><span class="product_code"></span></li>
+              <li><span class="propert-name">Quantity:</span><span class="product_quantity"></span></li>
+              <li><span class="propert-name">Delivery time:</span><span class="product_deliverytime"></span></li>
+              <li><span class="propert-name">Resell:</span><span class="product_resell"></span></li>
+              <li><span class="propert-name">In stock:</span><span class="product_instock"></span></li>
+          </ul>
+
 					<input class="product_amount" type="number" value="1" min="1">
 					<input class="product_id" type="hidden" name="id" data-json="">
 					<button class="btn btn-outline-dark shop-button" onclick="event.stopPropagation();addAmountClosestToBasket(this);$('.toast').toast('show')">🛒</button>
@@ -127,6 +128,8 @@
               clone.querySelector(".product_price").textContent = `€ ${product.price.toFixed(2)}`
               clone.querySelector(".product_quantity").textContent =`${product.quantity}`
               clone.querySelector(".product_resell").textContent =`${product.resell}`
+              clone.querySelector(".product_deliverytime").textContent = product.deliverytime_id;
+              clone.querySelector(".product_instock").textContent = product.stock_id;
               clone.querySelector(".product_code").textContent = product.code
               clone.querySelector(".product_id").value = product.id
               clone.querySelector(".product_id").dataset.json = JSON.stringify(product)
